--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>99 Lines of Code In The File</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
     <h1>My Singing Friends</h1>
     <div class="friend">
@@ -17,4 +20,5 @@
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
